--- a/portfolio.html
+++ b/portfolio.html
@@ -19,20 +19,23 @@
 <body>
     <header class="header">
         <div class="conteiner head">
-            <a class="header-logo" href="/">Web<span class="header-logo-black">Studio</span></a>
             <nav class="header-niv">
+                <a class="header-logo" href="/">Web<span class="header-logo-black">Studio</span></a>
                 <ul class="header-mainlist-list">
-                    <li class="header-mainlist-sites-item"><a class="header-link" href="./index.html">Студія</a></li>
                     <li class="header-mainlist-sites-item"><a class="header-link active-link"
-                            href="./portfolio.html">Портфоліо</a></li>
-                    <li class="header-mainlist-sites-item"><a class="header-link" href="./">Контакти</a></li>
+                            href="./index.html">Студія</a>
+                    </li>
+                    <li class="header-mainlist-sites-item"><a class="header-link" href="./portfolio.html">Портфоліо</a>
+                    </li>
+                    <li class="header-mainlist-sites-item"><a class="header-link" href="./">Контакти</a>
+                    </li>
                 </ul>
             </nav>
             <ul class="header-second-list">
-                <li class="header-second-list-item"><a class="contacts-links" href="mailto:info@devstudio.com">
+                <li class="header-second-list-item"><a class="contacts-links linke" href="mailto:info@devstudio.com">
                         info@devstudio.com</a></li>
                 <li class="header-second-list-item">
-                    <a class="contacts-links" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="contacts-links linke" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -117,7 +120,7 @@
                 <a class="footer-link" href="/">info@devstudio.com</a>
             </li>
             <li class="footer-list-item">
-                <a class="phone-number" href="/">+38 096 111 11 11</a>
+                <a class="footer-phone-number" href="/">+38 096 111 11 11</a>
             </li>
         </ul>
     </footer>
