--- a/portfolio.html
+++ b/portfolio.html
@@ -22,10 +22,10 @@
             <nav class="header-niv">
                 <a class="header-logo" href="/">Web<span class="header-logo-black">Studio</span></a>
                 <ul class="header-mainlist-list">
-                    <li class="header-mainlist-sites-item"><a class="header-link active-link"
-                            href="./index.html">Студія</a>
+                    <li class="header-mainlist-sites-item"><a class="header-link" href="./index.html">Студія</a>
                     </li>
-                    <li class="header-mainlist-sites-item"><a class="header-link" href="./portfolio.html">Портфоліо</a>
+                    <li class="header-mainlist-sites-item"><a class="header-link active-link"
+                            href="./portfolio.html">Портфоліо</a>
                     </li>
                     <li class="header-mainlist-sites-item"><a class="header-link" href="./">Контакти</a>
                     </li>
