--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="conteiner owrwork">
                 <ul class="ourwork-list">
                     <li class="ourwork-list-ourwurk-item">
-                        <h3 class="ourwork-atention-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                        <h3 class="ourwork-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="list-text">Ідейні міркування, і навіть початок повсякденної роботи з формування
                             позиції.
                         </p>
@@ -62,11 +62,11 @@
                         </p>
                     </li>
                     <li class="ourwork-list-ourwurk-item">
-                        <h3 class="ourwork-atention-title">ПЛАНУВАННЯ</h3>
+                        <h3 class="ourwork-title">ПЛАНУВАННЯ</h3>
                         <p class="list-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li class="ourwork-list-ourwurk-item">
-                        <h3 class="ourwork-atention-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                        <h3 class="ourwork-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                         <p class="list-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
                         </p>
                     </li>
@@ -120,7 +120,7 @@
     <footer class="footer">
         <div class="conteiner foot">
             <a class="header-logo" href="/">Web<span class="footer-logo-white">Studio</span></a>
-            <address class="address.">
+            <address class="address">
                 <ul class="footer-list">
                     <li class="footer-list-item address">
                         <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
