--- a/portfolio.html
+++ b/portfolio.html
@@ -42,87 +42,92 @@
     </header>
     <main>
         <section class="all">
-            <ul class="portfolios">
-                <li class="portfolios-sites-item">
-                    <a class="portfolios-sites-item-link active-link" href="./">Усі</a>
-                </li>
-                <li class="portfolios-sites-item">
-                    <a class="portfolios-sites-item-link" href="./">Веб-сайти</a>
-                </li>
-                <li class="portfolios-sites-item">
-                    <a class="portfolios-sites-item-link" href="./">Додатки</a>
-                </li>
-                <li class="portfolios-sites-item">
-                    <a class="portfolios-sites-item-link" href="./">Дизайн</a>
-                </li>
-                <li class="portfolios-sites-item">
-                    <a class="portfolios-sites-item-link" href="./">Маркетинг</a>
-                </li>
-            </ul>
-        </section>
-        <section class="works">
-            <ul class="works-list">
-                <li class="works-list-item">
-                    <img src="./images-portfolio/img.jpg" alt="технокряк">
-                    <h2 class="item-nameofsite-title">Технокряк</h2>
-                    <p class="item-nameofsite-portfoli">Веб-сайт</p>
-                </li>
-                <li class="works-list-item">
-                    <img src="./images-portfolio/img-2.jpg" alt="Постер New Orlean vs Golden Star">
-                    <h2 class="item-nameofsite-title">Постер New Orlean vs Golden Star</h2>
-                    <p class="item-nameofsite-portfoli">Дизайн</p>
-                </li>
-                <li class="works-list-item">
-                    <img src="./images-portfolio/img-3.jpg" alt="Ресторан Seafood">
-                    <h2 class="item-nameofsite-title">Ресторан Seafood</h2>
-                    <p class="item-nameofsite-portfoli">Додаток</p>
-                </li>
-                <li class="works-list-item">
-                    <img src="./images-portfolio/img-4.jpg" alt="Проєкт Prime">
-                    <h2 class="item-nameofsite-title">Проєкт Prime</h2>
-                    <p class="item-nameofsite-portfoli">Маркетинг</p>
-                </li>
-                <li class="works-list-item">
-                    <img src="./images-portfolio/img-5.jpg" alt="Проєкт Boxes">
-                    <h2 class="item-nameofsite-title">Проєкт Boxes</h2>
-                    <p class="item-nameofsite-portfoli">Додаток</p>
-                </li>
-                <li class="works-list-item">
-                    <img src="./images-portfolio/img-6.jpg" alt="Inspiration has no Borders">
-                    <h2 class="item-nameofsite-title">Inspiration has no Borders</h2>
-                    <p class="item-nameofsite-portfoli">Веб-сайт</p>
-                </li>
-                <li class="works-list-item">
-                    <img src="./images-portfolio/img-7.jpg" alt="Видання Limited Edition">
-                    <h2 class="item-nameofsite-title">Видання Limited Edition</h2>
-                    <p class="item-nameofsite-portfoli">Дизайн</p>
-                </li>
-                <li class="works-list-item">
-                    <img src="./images-portfolio/img-8.jpg" alt="Проєкт LAB">
-                    <h2 class="item-nameofsite-title">Проєкт LAB</h2>
-                    <p class="item-nameofsite-portfoli">Маркетинг</p>
-                </li>
-                <li class="works-list-item">
-                    <img src="./images-portfolio/img-9.jpg" alt="Growing Business">
-                    <h2 class="item-nameofsite-title">Growing Business</h2>
-                    <p class="item-nameofsite-portfoli">Додаток</p>
-                </li>
-            </ul>
+            <div class="conteiner">
+                <ul class="portfolios">
+                    <li class="portfolios-sites-item">
+                        <a class="portfolios-sites-item-link active-link" href="./">Усі</a>
+                    </li>
+                    <li class="portfolios-sites-item">
+                        <a class="portfolios-sites-item-link" href="./">Веб-сайти</a>
+                    </li>
+                    <li class="portfolios-sites-item">
+                        <a class="portfolios-sites-item-link" href="./">Додатки</a>
+                    </li>
+                    <li class="portfolios-sites-item">
+                        <a class="portfolios-sites-item-link" href="./">Дизайн</a>
+                    </li>
+                    <li class="portfolios-sites-item">
+                        <a class="portfolios-sites-item-link" href="./">Маркетинг</a>
+                    </li>
+                </ul>
+                <ul class="works-list">
+                    <li class="works-list-item">
+                        <img src="./images-portfolio/img.jpg" alt="технокряк">
+                        <h2 class="item-nameofsite-title">Технокряк</h2>
+                        <p class="item-nameofsite-portfoli">Веб-сайт</p>
+                    </li>
+                    <li class="works-list-item">
+                        <img src="./images-portfolio/img-2.jpg" alt="Постер New Orlean vs Golden Star">
+                        <h2 class="item-nameofsite-title">Постер New Orlean vs Golden Star</h2>
+                        <p class="item-nameofsite-portfoli">Дизайн</p>
+                    </li>
+                    <li class="works-list-item">
+                        <img src="./images-portfolio/img-3.jpg" alt="Ресторан Seafood">
+                        <h2 class="item-nameofsite-title">Ресторан Seafood</h2>
+                        <p class="item-nameofsite-portfoli">Додаток</p>
+                    </li>
+                    <li class="works-list-item">
+                        <img src="./images-portfolio/img-4.jpg" alt="Проєкт Prime">
+                        <h2 class="item-nameofsite-title">Проєкт Prime</h2>
+                        <p class="item-nameofsite-portfoli">Маркетинг</p>
+                    </li>
+                    <li class="works-list-item">
+                        <img src="./images-portfolio/img-5.jpg" alt="Проєкт Boxes">
+                        <h2 class="item-nameofsite-title">Проєкт Boxes</h2>
+                        <p class="item-nameofsite-portfoli">Додаток</p>
+                    </li>
+                    <li class="works-list-item">
+                        <img src="./images-portfolio/img-6.jpg" alt="Inspiration has no Borders">
+                        <h2 class="item-nameofsite-title">Inspiration has no Borders</h2>
+                        <p class="item-nameofsite-portfoli">Веб-сайт</p>
+                    </li>
+                    <li class="works-list-item">
+                        <img src="./images-portfolio/img-7.jpg" alt="Видання Limited Edition">
+                        <h2 class="item-nameofsite-title">Видання Limited Edition</h2>
+                        <p class="item-nameofsite-portfoli">Дизайн</p>
+                    </li>
+                    <li class="works-list-item">
+                        <img src="./images-portfolio/img-8.jpg" alt="Проєкт LAB">
+                        <h2 class="item-nameofsite-title">Проєкт LAB</h2>
+                        <p class="item-nameofsite-portfoli">Маркетинг</p>
+                    </li>
+                    <li class="works-list-item">
+                        <img src="./images-portfolio/img-9.jpg" alt="Growing Business">
+                        <h2 class="item-nameofsite-title">Growing Business</h2>
+                        <p class="item-nameofsite-portfoli">Додаток</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a class="header-logo" href="/">Web<span class="footer-logo-white">Studio</span></a>
-        <ul class="footer-list">
-            <li class="footer-list-item">
-                <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
-            </li>
-            <li class="footer-list-item">
-                <a class="footer-link" href="/">info@devstudio.com</a>
-            </li>
-            <li class="footer-list-item">
-                <a class="footer-phone-number" href="/">+38 096 111 11 11</a>
-            </li>
-        </ul>
+        <div class="conteiner foot">
+            <a class="header-logo" href="/">Web<span class="footer-logo-white">Studio</span></a>
+            <address class="address">
+                <ul class="footer-list">
+                    <li class="footer-list-item address">
+                        <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
+                    </li>
+                    <li class="footer-list-item">
+                        <a class="footer-link" href="/">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a class="footer-phone-number" href="/">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
+
     </footer>
 </body>
 
