--- a/portfolio.html
+++ b/portfolio.html
@@ -45,19 +45,19 @@
             <div class="conteiner">
                 <ul class="portfolios">
                     <li class="portfolios-sites-item">
-                        <button class="portfolios-sites-item-link active-link" href="./">Усі</button>
+                        <button class="portfolios-button active-link">Усі</button>
                     </li>
                     <li class="portfolios-sites-item">
-                        <button class="portfolios-sites-item-link" href="./">Веб-сайти</button>
+                        <button class="portfolios-button">Веб-сайти</button>
                     </li>
                     <li class="portfolios-sites-item">
-                        <button class="portfolios-sites-item-link" href="./">Додатки</button>
+                        <button class="portfolios-button">Додатки</button>
                     </li>
                     <li class="portfolios-sites-item">
-                        <button class="portfolios-sites-item-link" href="./">Дизайн</button>
+                        <button class="portfolios-button">Дизайн</button>
                     </li>
                     <li class="portfolios-sites-item">
-                        <button class="portfolios-sites-item-link" href="./">Маркетинг</button>
+                        <button class="portfolios-button">Маркетинг</button>
                     </li>
                 </ul>
                 <ul class="works-list">
