--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
             <div class="conteiner">
                 <ul class="portfolios">
                     <li class="portfolios-sites-item">
-                        <button class="portfolios-button active-link">Усі</button>
+                        <button class="portfolios-button activ-link">Усі</button>
                     </li>
                     <li class="portfolios-sites-item">
                         <button class="portfolios-button">Веб-сайти</button>
