--- a/index.html
+++ b/index.html
@@ -32,10 +32,20 @@
                 </ul>
             </nav>
             <ul class="header-second-list">
-                <li class="header-second-list-item"><a class="contacts-links" href="mailto:info@devstudio.com">
-                        info@devstudio.com</a></li>
                 <li class="header-second-list-item">
-                    <a class="contacts-links" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <svg class="header-svg" widht="20" height="20">
+                        <use href="./images/symboldefs.svg#envelope"></use>
+                    </svg>
+                    <a class="contacts-links" href="mailto:info@devstudio.com">
+                        info@devstudio.com</a>
+                </li>
+                <li class="header-second-list-item">
+                    <svg class="header-svg" widht="20" height="20">
+                        <use href="./images/symboldefs.svg#smartphone"></use>
+                    </svg>
+                    <a class="contacts-links" href="tel:+380961111111">
+                        +38 096 111 11 11
+                    </a>
                 </li>
             </ul>
         </div>
