--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header class="header">
         <div class="conteiner head">
-            <nav class="header-niv">
+            <nav class="header-nav">
                 <a class="header-logo" href="/">Web<span class="header-logo-black">Studio</span></a>
                 <ul class="header-mainlist-list">
                     <li class="header-mainlist-sites-item"><a class="header-link active-link"
@@ -34,14 +34,14 @@
             <ul class="header-second-list">
                 <li class="header-second-list-item">
                     <a class="contacts-links" href="mailto:info@devstudio.com">
-                        <svg class="header-svg" widht="16" height="12">
+                        <svg class="header-svg" width="16" height="12">
                             <use href="./images/symboldefs.svg#envelope"></use>
                         </svg>
                         info@devstudio.com</a>
                 </li>
                 <li class="header-second-list-item">
                     <a class="contacts-links" href="tel:+380961111111">
-                        <svg class="header-svg" widht="10" height="16">
+                        <svg class="header-svg" width="10" height="16">
                             <use href="./images/symboldefs.svg#smartphone"></use>
                         </svg>
                         +38 096 111 11 11
