--- a/portfolio.html
+++ b/portfolio.html
@@ -19,23 +19,33 @@
 <body>
     <header class="header">
         <div class="conteiner head">
-            <nav class="header-niv">
+            <nav class="header-nav">
                 <a class="header-logo" href="/">Web<span class="header-logo-black">Studio</span></a>
                 <ul class="header-mainlist-list">
-                    <li class="header-mainlist-sites-item"><a class="header-link" href="./index.html">Студія</a>
-                    </li>
                     <li class="header-mainlist-sites-item"><a class="header-link active-link"
-                            href="./portfolio.html">Портфоліо</a>
+                            href="./index.html">Студія</a>
+                    </li>
+                    <li class="header-mainlist-sites-item"><a class="header-link" href="./portfolio.html">Портфоліо</a>
                     </li>
                     <li class="header-mainlist-sites-item"><a class="header-link" href="./">Контакти</a>
                     </li>
                 </ul>
             </nav>
             <ul class="header-second-list">
-                <li class="header-second-list-item"><a class="contacts-links linke" href="mailto:info@devstudio.com">
-                        info@devstudio.com</a></li>
                 <li class="header-second-list-item">
-                    <a class="contacts-links linke" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="contacts-links" href="mailto:info@devstudio.com">
+                        <svg class="header-svg" width="16" height="12">
+                            <use href="./images/symboldefs.svg#envelope"></use>
+                        </svg>
+                        info@devstudio.com</a>
+                </li>
+                <li class="header-second-list-item">
+                    <a class="contacts-links" href="tel:+380961111111">
+                        <svg class="header-svg" width="10" height="16">
+                            <use href="./images/symboldefs.svg#smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11
+                    </a>
                 </li>
             </ul>
         </div>
