--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </div>
         </section>
         <section class="clients">
-            <div class="inside-clients">
+            <div class="conteiner">
                 <h2 class="permanent-clients">Постійні клієнти</h2>
                 <ul class="clients-list">
                     <li class="clients-list-item">
