--- a/index.html
+++ b/index.html
@@ -89,12 +89,15 @@
                 <ul class="images-ourjob-list">
                     <li class="images-ourjob-list-item">
                         <img class="images-ourjob-list-item-img" src="./images/img.jpg" alt="програмування">
+                        <p class="images-text">Десктопні додатки</p>
                     </li>
                     <li class="images-ourjob-list-item">
                         <img class="images-ourjob-list-item-img" src="./images/img-2.jpg" alt="дизайн">
+                        <p class="images-text">Мобільні додатки</p>
                     </li>
                     <li class="images-ourjob-list-item">
                         <img class="images-ourjob-list-item-img" src="./images/img-3.jpg" alt="оформлення">
+                        <p class="images-text">Дизайнерські рішення</p>
                     </li>
                 </ul>
             </div>
