--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </li>
                     <li class="header-mainlist-sites-item"><a class="header-link" href="./portfolio.html">Портфоліо</a>
                     </li>
-                    <li class="header-mainlist-sites-item"><a class="header-link" href="./">Контакти</a>
+                    <li class="header-mainlist-sites-item"><a class="header-link" href="#contacts">Контакти</a>
                     </li>
                 </ul>
             </nav>
@@ -290,7 +290,7 @@
     <footer class="footer">
         <div class="conteiner foot">
             <a class="header-logo" href="/">Web<span class="footer-logo-white">Studio</span></a>
-            <address class="address">
+            <address class="address" id="contacts">
                 <ul class="footer-list">
                     <li class="footer-list-item address">
                         <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
