--- a/portfolio.html
+++ b/portfolio.html
@@ -22,12 +22,12 @@
             <nav class="header-nav">
                 <a class="header-logo" href="/">Web<span class="header-logo-black">Studio</span></a>
                 <ul class="header-mainlist-list">
+                    <li class="header-mainlist-sites-item"><a class="header-link" href="./index.html">Студія</a>
+                    </li>
                     <li class="header-mainlist-sites-item"><a class="header-link active-link"
-                            href="./index.html">Студія</a>
+                            href="./portfolio.html">Портфоліо</a>
                     </li>
-                    <li class="header-mainlist-sites-item"><a class="header-link" href="./portfolio.html">Портфоліо</a>
-                    </li>
-                    <li class="header-mainlist-sites-item"><a class="header-link" href="./">Контакти</a>
+                    <li class="header-mainlist-sites-item"><a class="header-link" href="#contacts">Контакти</a>
                     </li>
                 </ul>
             </nav>
@@ -124,7 +124,7 @@
         <div class="conteiner foot">
             <a class="header-logo" href="/">Web<span class="footer-logo-white">Studio</span></a>
             <address class="address">
-                <ul class="footer-list">
+                <ul class="footer-list" id="contacts">
                     <li class="footer-list-item address">
                         <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
                     </li>
