--- a/index.html
+++ b/index.html
@@ -54,7 +54,15 @@
         <section class="hero">
             <div class="conteiner heromain">
                 <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-                <button class="button" type="button">Замовити послугу</button>
+                <button class="hero-button" type="button" data-modal-open>Замовити послугу</button>
+                <div class="backdrop is-hidden" data-modal>
+                    <div class="modal">
+                        <button class="btn" data-modal-close>Закрити</button>
+                        <br />
+                        <br />
+                        <p class="modal-text">Тут буде ФОРМА:</p>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="ourwork">
@@ -376,6 +384,7 @@
             </address>
         </div>
     </footer>
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
