--- a/index.html
+++ b/index.html
@@ -58,9 +58,20 @@
                 <div class="backdrop is-hidden" data-modal>
                     <div class="modal">
                         <button class="btn" data-modal-close>Закрити</button>
-                        <br />
-                        <br />
-                        <p class="modal-text">Тут буде ФОРМА:</p>
+                        <p class="modal-text">Залиште свої дані, ми вам передзвонимо</p>
+                        <form>
+                            <label for="">Ім'я</label>
+                            <input type="text" required>
+                            <label for="">Телефон</label>
+                            <input type="text" required>
+                            <label for="">Пошта</label>
+                            <input type="text" required>
+                            <label for="">Коментар</label>
+
+                            <input type="checkbox">
+                            <label for="">Погоджуюся з розсилкою та приймаю Умови договору</label>
+                            <button>Відправити</button>
+                        </form>
                     </div>
                 </div>
             </div>
