--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
                         <button class="btn" data-modal-close>Закрити</button>
                         <p class="modal-text">Залиште свої дані, ми вам передзвонимо</p>
                         <form>
-                            <label for="">Ім'я</label>
-                            <input type="text" required>
-                            <label for="">Телефон</label>
-                            <input type="text" required>
-                            <label for="">Пошта</label>
-                            <input type="text" required>
-                            <label for="">Коментар</label>
+                            <label class="modal-label" for="">Ім'я</label>
+                            <input class="modal-input" type="text" required>
+                            <label class="modal-label" for="">Телефон</label>
+                            <input class="modal-input" type="text" required>
+                            <label class="modal-label" for="">Пошта</label>
+                            <input class="modal-input" type="text" required>
+                            <label class="modal-label" for="">Коментар</label>
 
-                            <input type="checkbox">
-                            <label for="">Погоджуюся з розсилкою та приймаю Умови договору</label>
-                            <button>Відправити</button>
+                            <input class="" type="checkbox">
+                            <label class="" for="">Погоджуюся з розсилкою та приймаю Умови договору</label>
+                            <button class="modal-send-button">Відправити</button>
                         </form>
                     </div>
                 </div>
