--- a/index.html
+++ b/index.html
@@ -405,17 +405,20 @@
                         </ul>
                     </li>
                 </ul>
+                <div class="sending">
+                    <p class="sending-text">
+                        Підпишіться на розсилку
+                    </p>
+                    <form class="footer-form">
+                        <input class="footer-input" type="text" id="rozsilka" placeholder="E-mail">
+                        <button class="footer-subscribe-button">Підписатися
+                            <svg class="footer-svg">
+                                <use href="./images/symbol-defs.svg#send"></use>
+                            </svg>
+                        </button>
+                    </form>
+                </div>
             </address>
-            <div class="">
-                <p class="">
-                    Підпишіться на розсилку
-                </p>
-                <form class="">
-                    <input class="" type="text" id="rozsilka" placeholder="E-mail">
-                    <label class="" for="rozsilka"></label>
-                    <button class=""></button>
-                </form>
-            </div>
         </div>
     </footer>
     <script src="./js/modal.js"></script>
