--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                                 <label class="modal-label" for="coments">Коментар</label>
                                 <input class="modal-coments" type="text" id="coments" placeholder="Введіть текст"
                                     required>
-                            </div>
-                            <div class="send-div">
+                                <!-- </div> -->
+                                <!-- <div class="send-div"> -->
                                 <input class="modal-checkbox" type="checkbox" id="checkbox">
                                 <label class="checkbox-label" for="checkbox">Погоджуюся з розсилкою та приймаю
                                     <a href="/">
